Termine el sprint 4 y voy a crear una rama donde le voy hacer unos ajustes a mi pagina para luego mezclar las 2 ramas y practicar en git el tema de ramas y mezclar

--- a/archivos_CSS/styles.css
+++ b/archivos_CSS/styles.css
@@ -238,7 +238,6 @@ label {
 /* contenedor tabla */
 .tabla {
     width: 100%;
-    height: 50vh;
 }
 
 table {
@@ -250,14 +249,14 @@ table {
 .tittle_table {
     border: black solid 2px;
     background-color: darkgray;
-    color: black;
+    color: rgb(255, 255, 255);
     height: 4.6vh;
     width: 80vw;
 }
 
 th,
 td {
-    border: black solid 2px;
+    border: rgb(221, 221, 221) solid 2px;
     width: 23.3vw;
     height: 4vh;
     padding-left: 20px;
